# RegenPodcast

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
Codes/: 01 - Download Podcast.ipynb  02 - Whisper.ipynb  03 - QA System.ipynb  04 - Create index.ipynb  05 - Read transcript.ipynb  One to rule them all.ipynb  podlove.ipynb
Codes/blog_post/: squares.py
blog/: index.html
blog/global-local-analysis/: index.html
docs/: index.md
docs/Agtech - So What?/: 2022-the-year-of-risk-at-agtech-so-what.md  Agtech-headlines-so-what-mineral-launch-planet-labs-insurance-deere-right-to-repair.md  Building-a-food-business-ecosystem-from-the-farm-up-with-michael-bosworth-of-next-generation-foods.md
docs/Farm Gate/: The-future-of-dairy.md
docs/Farmerama/: 78-community-gardens-in-tāmaki-makaurau-and-organic-no-till-vineyards.md  Farming-fashion-part-1.md  Farming-fashion-part-2.md  Farming-fashion-part-3.md
docs/Investing in Regenerative Agriculture and Food/: 200-emma-chow-in-conversation-with-koen-van-seijen-regenerating-ourselves-before-working-on-regenerative-agriculture-and-food.md  201-luni-libes-building-a-warren-buffet-style-portfolio-while-serving-1m-african-smallholder-farmers.md  202-sven-verwiel-how-to-unlock-the-potential-of-syntropic-agroforestry-in-east-africa.md  203-jeremy-leggett-learning-from-a-solar-energy-pioneer-on-making-nature-recovery-bankable.md  (+2 more)
search/: search_index.json
(+241 files in other folders)
