[tool.poetry]
name = "thimm-github-io"
version = "0.1.0"
description = ""
authors = ["Thimm <zwiener@gmail.com>"]
readme = "README.md"
packages = [{include = "thimm"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
